Redesigning load/save function